--- a/src/sass/blocks/sidebar.scss
+++ b/src/sass/blocks/sidebar.scss
@@ -40,7 +40,7 @@
   min-height: 100vh;
   height: 100%;
   padding: 60px 48px;
-  z-index: 3;
+  z-index: 11;
   cursor: default;
 
   &--open {
